# indy-sherlock

./: .gitignore  Cargo.toml
docs/guides/: anomaly.md
src/: README.md  audit_engine.rs  error.rs  lib.rs  main.rs
src/cache/: mod.rs
src/config/: ledgers.rs  mod.rs  trust_store.rs
src/detector/: mod.rs  role_changes.rs  schema_modifications.rs
src/fetcher/: mod.rs
src/helpers/: genesis.rs
src/parser/: mod.rs  transaction_types.rs
src/validator/: format_rules.rs  mod.rs  permission_rules.rs  sequence_rules.rs  signature.rs  state_proof.rs  state_proof_rule.rs
