[package]
name = "indy-sherlock"
version = "0.5.0"
edition = "2024"

[dependencies]
# Indy dependencies
indy-vdr = { git = "https://github.com/hyperledger/indy-vdr", branch = "main" }
indy-data-types = "0.7.1"
aries-askar = { version = "0.4.0", optional = true, default-features = false }

# Crypto for signature verification
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

# CLI
clap = { version = "4.3", features = ["derive"] }
dialoguer = "0.11"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for fetching genesis files
reqwest = { version = "0.12", features = ["json"] }

# File system operations and path handling
dirs = "5.0"

[features]
default = []
wallet = ["aries-askar"]